correct bug in graphs

--- a/templates/smartos/nad.conf.erb
+++ b/templates/smartos/nad.conf.erb
@@ -74,12 +74,12 @@
             "style": "area",
             "datapoints": [
                 {
-                    "name": "% free",
+                    "name": "free memory",
                     "metric_name": "vminfo`unix:0:vminfo:freemem",
                     "metric_type": "numeric",
                     "axis": "l",
                     "stack": null,
-                    "derive": "gauge",
+                    "derive": "counter",
                     "hidden": false,
                     "alpha": 0.3
                 }
